--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,13 @@
       <version>4.0.1</version>
       <scope>provided</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>okhttp</artifactId>
+      <version>4.4.1</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>FindWifi</finalName>
