--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
       <version>4.4.1</version>
     </dependency>
 
+      <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.8.9</version>
+        <scope>compile</scope>
+      </dependency>
+
   </dependencies>
   <build>
     <finalName>FindWifi</finalName>
