--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
         <scope>compile</scope>
       </dependency>
 
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.40.0.0</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>FindWifi</finalName>
