--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
       </dependency>
 
     <dependency>
+      <groupId>org.apache.tomcat</groupId>
+      <artifactId>tomcat-jsp-api</artifactId>
+      <version>9.0.73</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.xerial</groupId>
       <artifactId>sqlite-jdbc</artifactId>
       <version>3.40.0.0</version>
